tests/snapshots/render_snapshots__expanded_one_tool_turn_w80.snap
---
source: tests/render_snapshots.rs
expression: text
---
│ Let me read the config file.
│
│ ┄ ✓ Success Read "" → running... (5.0s) ┄
│
