tests/snapshots/render_snapshots__live_rail_with_progress_w80.snap
---
source: tests/render_snapshots.rs
expression: text_with
---
│ Let me run the build.
│
│ ┄ ● Executing Bash "" → running... (0.0s) ┄
│ ⠸ Bash (3/10)
│
