tests/snapshots/render_snapshots__live_rail_with_tail_w80.snap
---
source: tests/render_snapshots.rs
expression: text
---
│ Let me run the build.
│
│ ┄ ● Executing Bash "" → running... (0.0s) ┄
│ ⠸ Bash (4/4)
│   line1
│   line2
│   line3
│   line4
│
