tests/snapshots/render_snapshots__mixed_with_reasoning_w200.snap
---
source: tests/render_snapshots.rs
expression: text
---
│ Let me analyze this structure.
│
│
│ The design uses a hexagonal architecture pattern which separates domain from adapters.
│
│ ┄ ✓ Success Read "" → running... (5.0s) ┄
│
