tests/snapshots/render_snapshots__post_collapse_tier1_default_w80.snap
---
source: tests/render_snapshots.rs
expression: text
---
│ ▸ Let me find all the relevant files and examine them carefully.… · 3 tools ✓
