tests/snapshots/render_snapshots__tool_only_turn_no_prose_w80.snap
---
source: tests/render_snapshots.rs
expression: text
---
│ ┄ ✓ Success Read "" → running... (5.0s) ┄
│ ┄ ✓ Success Bash "" → running... (5.0s) ┄
│
